End of work 27.03.2021
Added a full HTML structure

--- a/index.html
+++ b/index.html
@@ -5,9 +5,165 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt Technologie Webowe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <section>
+        <nav>
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#work">work</a>
+            <a href="#process">process</a>
+            <a href="#services">services</a>
+            <a href="#testimonials">testimonials</a>
+            <a href="#contact">contact</a>
+        </nav>
+        <p>We Design and Develop</p>
+        <span>We are a new design studio based in USA. We have over 20 years of combined expirence, and know a thing or two about designing and mobile apps.</span>
+        <button>contact us</button>
+    </section>
+    <section>
+        <p>About Us</p>
+        <span>Divide have don't man wherein air fourth. Own itself make have night won't make. A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all</span>
+        <p>Professional Skills</p>
+        <label>ui/ux design 75%<meter value="75" min="0" max="100"></meter></label>
+        <label>web development 90%<meter value="90" min="0" max="100"></meter></label>
+        <label>marketing 65%<meter value="65" min="0" max="100"></meter></label>
+    </section>
+    <div>
+        <div>
+            <i></i>
+            <p>548</p>
+            <span>Projects completed</span>
+        </div>
+        <div>
+            <i></i>
+            <p>1465</p>
+            <span>working hours</span>
+        </div>
+        <div>
+            <i></i>
+            <p>612</p>
+            <span>positive feedbacks</span>
+        </div>
+        <div>
+            <i></i>
+            <p>735</p>
+            <span>happy clients</span>
+        </div>
+    </div>
+    <section>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <p>load more work</p>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </section>
+    <section>
+        <p>Our work process</p>
+        <span>Was years it season was there form he in them together over that, third sisth gathered female creeping bearing behold years.</span>
+        <video src=""></video>
+    </section>
+    <section>
+        <div>
+            <i></i>
+            <p>ui/ux design</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i></i>
+            <p>web development</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i>app/mobile</i>
+            <p></p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i></i>
+            <p>game design</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i></i>
+            <p>seo / marketing</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i></i>
+            <p>photography</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i></i>
+            <p>graphic design</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+        <div>
+            <i></i>
+            <p>illustrations</p>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
+        </div>
+    </section>
+    <div>
+        <!-- tutaj slider -->
+    </div>
+    <div>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+    <section>
+        <p>Need a Project?</p>
+        <span>Let us know what uou're looking for in an agency. We'll take a look and see if this could be the start od something beautiful</span>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Email">
+            <input type="text" placeholder="Your Title">
+            <textarea cols="30" rows="10" placeholder="Your Comment"></textarea>
+            <button>Send Message</button>
+        </form>
+    </section>
+    <footer>
+        <div>
+            <span>Mateusz Wąsik INC.</span>
+            <span>&copy; 2021 Mateusz Wąsik INC. All rights reserved.</span>
+            <span>Designed by Mateusz Wąsik</span>
+        </div>
+        <div>
+            <span>hello@matwas.com</span>
+            <span>500 492 547</span>
+        </div>
+        <div>
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#work">Work</a>
+                <a href="#process">Process</a>
+                <a href="#services">Services</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#contact">Contact</a>
+                <a href="#work">Projects</a>
+            </nav>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/">Facebook</a>
+            <a href="https://twitter.com/?lang=pl">Twitter</a>
+            <a href="https://www.linkedin.com/feed/">LinkedIn</a>
+            <a href="https://github.com/">GitHub</a>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
