End of short work in 03.04

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section>
-        <nav>
-            <a href="#home">home</a>
-            <a href="#about">about</a>
-            <a href="#work">work</a>
-            <a href="#process">process</a>
-            <a href="#services">services</a>
-            <a href="#testimonials">testimonials</a>
-            <a href="#contact">contact</a>
-        </nav>
+    <nav>
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#work">work</a>
+        <a href="#process">process</a>
+        <a href="#services">services</a>
+        <a href="#testimonials">testimonials</a>
+        <a href="#contact">contact</a>
+    </nav>
+    <section class="fSection">
         <p>We Design and Develop</p>
         <span>We are a new design studio based in USA. We have over 20 years of combined expirence, and know a thing or two about designing and mobile apps.</span>
         <button>contact us</button>
@@ -164,6 +164,6 @@
             <a href="https://github.com/">GitHub</a>
         </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
