End of work in 02.05.2021
Adding a few new css style to section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt Technologie Webowe</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f5980c77b0.js" crossorigin="anonymous" async=""></script>
 </head>
 <body>
     <nav>
@@ -18,40 +20,48 @@
         <a href="#contact">contact</a>
     </nav>
     <section class="fSection">
-        <p>We Design and Develop</p>
-        <span>We are a new design studio based in USA. We have over 20 years of combined expirence, and know a thing or two about designing and mobile apps.</span>
-        <button>contact us</button>
+        <div>
+            <p>We Design and Develop</p>
+            <span>We are a new design studio based in USA. We have over 20 years of combined expirence, and know a thing or two about designing and mobile apps.</span>
+            <button>contact us</button>
+        </div>
+
     </section>
-    <section>
+    <section class="aboutUs">
         <p>About Us</p>
         <span>Divide have don't man wherein air fourth. Own itself make have night won't make. A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all</span>
-        <p>Professional Skills</p>
-        <label>ui/ux design 75%<meter value="75" min="0" max="100"></meter></label>
-        <label>web development 90%<meter value="90" min="0" max="100"></meter></label>
-        <label>marketing 65%<meter value="65" min="0" max="100"></meter></label>
+        <img src="img/signature.png" alt="signature">
     </section>
-    <div>
+    <section class="skills">
         <div>
-            <i></i>
-            <p>548</p>
-            <span>Projects completed</span>
+            <p>Professional Skills</p>
+            <label>ui/ux design &nbsp; 75%<meter value="75" min="0" max="100"></meter></label>
+            <label>web development &nbsp; 90%<meter value="90" min="0" max="100"></meter></label>
+            <label>marketing &nbsp; 65%<meter value="65" min="0" max="100"></meter></label>
+        </div>
+    </section>
+    <section class="data clearfix">
+        <div>
+            <i class="fas fa-briefcase"></i>
+            <span>548</span>
+            <p>Projects completed</span>
         </div>
         <div>
-            <i></i>
-            <p>1465</p>
-            <span>working hours</span>
+            <i class="far fa-clock"></i>
+            <span>1465</span>
+            <p>working hours</span>
         </div>
         <div>
-            <i></i>
-            <p>612</p>
-            <span>positive feedbacks</span>
+            <i class="far fa-star"></i>
+            <span>612</span>
+            <p>positive feedbacks</span>
         </div>
         <div>
-            <i></i>
-            <p>735</p>
-            <span>happy clients</span>
+            <i class="far fa-heart"></i>
+            <span>735</span>
+            <p>happy clients</span>
         </div>
-    </div>
+    </section>
     <section>
         <img src="" alt="">
         <img src="" alt="">
