End of work in 08.05

--- a/index.html
+++ b/index.html
@@ -62,25 +62,31 @@
             <p>happy clients</span>
         </div>
     </section>
-    <section>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+    <section class="gallery">
+            <img src="img/WhiteItem0.jpg" alt="Obrazek 0">
+            <img src="img/WhiteItem1.jpg" alt="Obrazek 1">
+            <img src="img/WhiteItem2.jpg" alt="Obrazek 2">
+            <img src="img/WhiteItem3.jpg" alt="Obrazek 3">
+            <img src="img/WhiteItem4.jpg" alt="Obrazek 4">
+            <img src="img/WhiteItem5.jpg" alt="Obrazek 5">
+            <img src="img/WhiteItem6.jpg" alt="Obrazek 6">
+            <img src="img/WhiteItem7.jpg" alt="Obrazek 7">
         <p>load more work</p>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <div class="hidden">
+            <img src="img/WhiteItem8.jpg" alt="Obrazek 8">
+            <img src="img/WhiteItem9.jpg" alt="Obrazek 9">
+            <img src="img/WhiteItem10.jpg" alt="Obrazek 10">
+            <img src="img/WhiteItem11.jpg" alt="Obrazek 11">
+        </div>
     </section>
-    <section>
+    <section class="video">
         <p>Our work process</p>
         <span>Was years it season was there form he in them together over that, third sisth gathered female creeping bearing behold years.</span>
-        <video src=""></video>
+        <video controls loop muted>
+            <source src="video/cat.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+          </video>
     </section>
     <section>
         <div>
