end of wrok 09.05

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </section>
     <section class="video">
-        <p>Our work process</p>
+        <p>Our Work Process</p>
         <span>Was years it season was there form he in them together over that, third sisth gathered female creeping bearing behold years.</span>
         <video controls loop muted>
             <source src="video/cat.mp4" type="video/mp4">
@@ -140,13 +140,13 @@
         <img src="" alt="">
         <img src="" alt="">
     </div>
-    <section>
+    <section class="form">
         <p>Need a Project?</p>
         <span>Let us know what uou're looking for in an agency. We'll take a look and see if this could be the start od something beautiful</span>
         <form>
-            <input type="text" placeholder="Your Name">
-            <input type="text" placeholder="Your Email">
-            <input type="text" placeholder="Your Title">
+            <input type="text" placeholder="Your Name" class="short">
+            <input type="email" placeholder="Your Email" class="short">
+            <input type="text" placeholder="Your Title" class="long">
             <textarea cols="30" rows="10" placeholder="Your Comment"></textarea>
             <button>Send Message</button>
         </form>
