End of work in 17:40

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/f5980c77b0.js" crossorigin="anonymous" async=""></script>
 </head>
 <body>
-    <nav>
+    <nav class="nav">
         <a href="#home">home</a>
         <a href="#about">about</a>
         <a href="#work">work</a>
@@ -88,44 +88,44 @@
           Your browser does not support the video tag.
           </video>
     </section>
-    <section>
+    <section class="description">
         <div>
-            <i></i>
+            <i class="far fa-gem"></i>
             <p>ui/ux design</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i></i>
+            <i class="fas fa-crown"></i>
             <p>web development</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i>app/mobile</i>
-            <p></p>
+            <i class="fas fa-mobile-alt"></i>
+            <p>app mobile</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i></i>
+            <i class="fas fa-gamepad"></i>
             <p>game design</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i></i>
+            <i class="fas fa-plane"></i>
             <p>seo / marketing</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i></i>
+            <i class="far fa-star"></i>
             <p>photography</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i></i>
+            <i class="fas fa-magic"></i>
             <p>graphic design</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
         <div>
-            <i></i>
+            <i class="fas fa-fill-drip"></i>
             <p>illustrations</p>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
@@ -152,28 +152,30 @@
         </form>
     </section>
     <footer>
-        <div>
-            <span>Mateusz Wąsik INC.</span>
-            <span>&copy; 2021 Mateusz Wąsik INC. All rights reserved.</span>
-            <span>Designed by Mateusz Wąsik</span>
+        <div class="companyData">
+            <p>Mateusz Wąsik INC.</p>
+            <p>&copy; 2021 Mateusz Wąsik INC. All rights reserved.</p>
+            <p>Designed by Mateusz Wąsik</p>
         </div>
-        <div>
-            <span>hello@matwas.com</span>
-            <span>500 492 547</span>
+        <div class="contact">
+            <p>hello@matwas.com</p>
+            <p>500 492 547</p>
         </div>
-        <div>
+        <div class="navigation">
             <nav>
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#work">Work</a>
                 <a href="#process">Process</a>
+            </nav>
+            <nav>
                 <a href="#services">Services</a>
                 <a href="#testimonials">Testimonials</a>
                 <a href="#contact">Contact</a>
                 <a href="#work">Projects</a>
             </nav>
         </div>
-        <div>
+        <div class="socialMedia">
             <a href="https://www.facebook.com/">Facebook</a>
             <a href="https://twitter.com/?lang=pl">Twitter</a>
             <a href="https://www.linkedin.com/feed/">LinkedIn</a>
