End of work in 30.05.2021

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
             <img src="img/WhiteItem5.jpg" alt="Obrazek 5">
             <img src="img/WhiteItem6.jpg" alt="Obrazek 6">
             <img src="img/WhiteItem7.jpg" alt="Obrazek 7">
-        <p>load more work</p>
-        <div class="hidden">
+        <p class="galleryParagraph">load more work</p>
+    </section>
+    <section class="hiddenSection">
+        <div id="hG" class="hidden hiddenGallery">
             <img src="img/WhiteItem8.jpg" alt="Obrazek 8">
             <img src="img/WhiteItem9.jpg" alt="Obrazek 9">
             <img src="img/WhiteItem10.jpg" alt="Obrazek 10">
@@ -82,11 +84,14 @@
     <section class="video">
         <p>Our Work Process</p>
         <span>Was years it season was there form he in them together over that, third sisth gathered female creeping bearing behold years.</span>
-        <video controls loop muted>
-            <source src="video/cat.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-          Your browser does not support the video tag.
-          </video>
+        <div>
+            <video loop muted class="videoPlayer">
+                <source src="video/cat.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+              Your browser does not support the video tag.
+            </video>
+            <button id="pause" class="player fas fa-play"></button>
+        </div>
     </section>
     <section class="description">
         <div>
@@ -158,7 +163,7 @@
             <p>Designed by Mateusz Wąsik</p>
         </div>
         <div class="contact">
-            <p>hello@matwas.com</p>
+            <p>wasikmateusz@wp.pl</p>
             <p>500 492 547</p>
         </div>
         <div class="navigation">
