end of wrok in 03.06.2021

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <nav class="nav">
         <a href="#home">home</a>
-        <a href="#about">about</a>
+        <a href="#aboutUs">about</a>
         <a href="#work">work</a>
         <a href="#process">process</a>
         <a href="#services">services</a>
         <a href="#testimonials">testimonials</a>
         <a href="#contact">contact</a>
     </nav>
-    <section class="fSection">
+    <section class="fSection" id="home">
         <div>
             <p>We Design and Develop</p>
             <span>We are a new design studio based in USA. We have over 20 years of combined expirence, and know a thing or two about designing and mobile apps.</span>
@@ -27,12 +27,12 @@
         </div>
 
     </section>
-    <section class="aboutUs">
+    <section class="aboutUs" id="aboutUs">
         <p>About Us</p>
         <span>Divide have don't man wherein air fourth. Own itself make have night won't make. A you under Seed appear which good give. Own give air without fowl moveth dry first heaven fruit, dominion she'd won't very all</span>
         <img src="img/signature.png" alt="signature">
     </section>
-    <section class="skills">
+    <section class="skills" id='work'>
         <div>
             <p>Professional Skills</p>
             <label>ui/ux design &nbsp; 75%<meter value="75" min="0" max="100"></meter></label>
@@ -40,7 +40,7 @@
             <label>marketing &nbsp; 65%<meter value="65" min="0" max="100"></meter></label>
         </div>
     </section>
-    <section class="data clearfix">
+    <section class="data clearfix" id="process">
         <div>
             <i class="fas fa-briefcase"></i>
             <span>548</span>
@@ -93,7 +93,7 @@
             <button id="pause" class="player fas fa-play"></button>
         </div>
     </section>
-    <section class="description">
+    <section class="description" id="services">
         <div>
             <i class="far fa-gem"></i>
             <p>ui/ux design</p>
@@ -138,14 +138,14 @@
     <div>
         <!-- tutaj slider -->
     </div>
-    <div>
+    <div id="testimonials">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
     </div>
-    <section class="form">
+    <section class="form" id="contact">
         <p>Need a Project?</p>
         <span>Let us know what uou're looking for in an agency. We'll take a look and see if this could be the start od something beautiful</span>
         <form>
