End of work in 05.06.2021

--- a/index.html
+++ b/index.html
@@ -135,15 +135,19 @@
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, autem.</span>
         </div>
     </section>
-    <div>
-        <!-- tutaj slider -->
-    </div>
-    <div id="testimonials">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+    <section class="slider">
+        <p class="quote"></p>
+        <p class="author"></p>
+        <button class="q1"></button>
+        <button class="q2"></button>
+        <button class="q3"></button>
+    </section>
+    <div class="testimonials" id="testimonials">
+        <img src="img/logo1.png" alt="Happy Client Logo 1">
+        <img src="img/logo2.jpg" alt="Happy Client Logo 2">
+        <img src="img/logo3.jpg" alt="Happy Client Logo 3">
+        <img src="img/logo4.png" alt="Happy Client Logo 4">
+        <img src="img/logo5.jpg" alt="Happy Client Logo 5">
     </div>
     <section class="form" id="contact">
         <p>Need a Project?</p>
@@ -181,10 +185,10 @@
             </nav>
         </div>
         <div class="socialMedia">
-            <a href="https://www.facebook.com/">Facebook</a>
-            <a href="https://twitter.com/?lang=pl">Twitter</a>
-            <a href="https://www.linkedin.com/feed/">LinkedIn</a>
-            <a href="https://github.com/">GitHub</a>
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a href="https://twitter.com/?lang=pl" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/" target="_blank">GitHub</a>
         </div>
     </footer>
     <script src="js/main.js"></script>
