End of Work in 19.06.2021
Adding a new @media

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt Technologie Webowe</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f5980c77b0.js" crossorigin="anonymous" async=""></script>
 </head>
@@ -26,7 +25,7 @@
             <span>We are a new design studio based in USA. We have over 20 years of combined expirence, and know a thing or two about designing and mobile apps.</span>
             <button>contact us</button>
         </div>
-
+        <div class="container"></div>
     </section>
     <section class="aboutUs" id="aboutUs">
         <p>About Us</p>
