--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
                 <a href="#contact">Contact</a>
                 <a href="#work">Projects</a>
             </nav>
-        </div>
-        <div class="socialMedia">
-            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-            <a href="https://twitter.com/?lang=pl" target="_blank">Twitter</a>
-            <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/" target="_blank">GitHub</a>
+            <nav>
+                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                <a href="https://twitter.com/?lang=pl" target="_blank">Twitter</a>
+                <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
+                <a href="https://github.com/" target="_blank">GitHub</a>
+            </nav>
         </div>
     </footer>
     <script src="js/main.js"></script>
