Styling for device

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             <nav>
                 <a href="https://www.facebook.com/" target="_blank">Facebook</a>
                 <a href="https://twitter.com/?lang=pl" target="_blank">Twitter</a>
-                <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/mateusz-w%C4%85sik-311bb61a2" target="_blank">LinkedIn</a>
+                <a href="https://github.com/MateuszWasik1" target="_blank">GitHub</a>
             </nav>
         </div>
     </footer>
