--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='description' content='Web page'>
+    <meta name='keywords' content='HTML, CSS, JS'>
+    <meta name='robots' content='follow'>
+    <meta name='author' content='Mateusz Wąsik'>
+    <meta name='copyright' content='Copyright owner'>
+    <meta content='mateuszwasikkontakt@gmail.com'>
     <title>Projekt Technologie Webowe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="examples/lightbox2-2.11.3/dist/css/lightbox.css">
